[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = 'setuptools.build_meta'

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "mppi_playground"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch>=2.00"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pysen",
    "black",
    "flake8",
    "isort",
    "mypy",
]